# practice-work

./: .gitignore  README.md
Haskell/real_world_haskell/practice/26_ch/: BloomFilter.hs  rwh-bloomfilter.cabal  stack.yaml
Haskell/real_world_haskell/practice/26_ch/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/doc/rwh-bloomfilter-0.1/: LICENSE.txt
Haskell/real_world_haskell/practice/26_ch/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/flag-cache/: QuickCheck-2.9.1-f533c646d10bdf8b9a51b634f75fe76e  rwh-bloomfilter-0.1-565409d15e9276fc49c57bbdae745c54
Haskell/real_world_haskell/practice/26_ch/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/lib/x86_64-linux-ghc-7.10.3/QuickCheck-2.9.1-CxBybJDmfJHCNJnCuBfcut/Test/: QuickCheck.dyn_hi  QuickCheck.hi
Haskell/real_world_haskell/practice/26_ch/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/lib/x86_64-linux-ghc-7.10.3/QuickCheck-2.9.1-CxBybJDmfJHCNJnCuBfcut/Test/QuickCheck/: All.dyn_hi  All.hi  Arbitrary.dyn_hi  Arbitrary.hi  Exception.dyn_hi  Exception.hi  Function.dyn_hi  Gen.dyn_hi  (+18 more)
Haskell/real_world_haskell/practice/26_ch/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/lib/x86_64-linux-ghc-7.10.3/rwh-bloomfilter-0.1-8NPN1FDCpGGBlCB0OJXzw7/BloomFilter/: Hash.hi  Internal.hi  Mutable.dyn_hi
Haskell/real_world_haskell/practice/26_ch/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/pkgdb/: QuickCheck-2.9.1-f533c646d10bdf8b9a51b634f75fe76e.conf  package.cache  rwh-bloomfilter-0.1-fa8262c4911a77376adc9a89402fe269.conf
Haskell/real_world_haskell/practice/26_ch/BloomFilter/: Easy.hs  Hash.hs  Internal.hs  Mutable.hs
Haskell/real_world_haskell/practice/26_ch/cbits/: liblookup3.so.1.0.1  lookup3.h
Haskell/real_world_haskell/practice/26_ch/examples/: BloomCheck.hs  WordTest  WordTest.hi  WordTest.hs
Haskell/real_world_haskell/practice/5_ch/: Main  Main.hi  Main.hs  Prettify.hs  PrettyJSON.hs  SimpleJSON.hi  SimpleJSON.hs  Trouble.hs  mypretty.cabal
(+625 files in other folders)
