Name:        mypretty
Version:     0.1

-- This is a comment. It stretches to the end of the line.

Synopsis:    My pretty printing library, with JSON support
Description:
  A simple pretty-printing library that illustrates how to develop a Haskell
  library.

Author:      Example User
Maintainer:  random@example.com

Cabal-Version: >= 1.2

library
  Exposed-Modules: Prettify
                   PrettyJSON
                   SimpleJSON
  Build-Depends:   base >= 2.0
